--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,99 @@
 }
 
 body{
-  font-family:'Avenir Next',sans-serif;
+  background-color: rgb(17,54,46);
+  font-family: 'Comfortaa', sans-serif;
   width: 960px;
   margin: auto;
+  cursor: url("mouse.jpg"), default;
+}
+
+.box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 500px;
+  height: 500px;
+  background: #262626;
+  cursor: url(boc.jpg),pointer;
+}
+
+#image-item-container {
+   display: flex;
+   justify-content: space-around;
 }
 
 h1{
-  font-family:'Avenir Next',sans-serif;
-  font-size: 72px;
-  margin-top:12px;
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 118px;
+  text-align: center;
+  margin-bottom:52px;
+  margin-top:72px;
+  color: rgb(143,214,222);
+  line-height:150px;
+  background: transparent;
+}
+
+
+h2{
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 82px;
+  margin-bottom: 16px;
+  text-align: center;
+  background-color: transparent;
+  color: rgb(69,144,186);
+}
+
+h3{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  margin-bottom: 6px;
+  text-align: center;
+  color: rgb(86,180,232);
+  background-color: transparent;
+}
+
+ol{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  margin-top: 160px;
+  margin-bottom: 162px;
+  text-align: center;
+  color: rgb(208,238,245);
+  background-color: transparent;
+  line-height:28px;
+}
+
+p{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  margin-top: 42px;
+  margin-bottom: 62px;
   text-align: left;
-  margin-bottom:20px;
+  color: rgb(208,238,245);
+  background-color: transparent;
+  line-height:22px;
+}
+
+blockquote{
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 62px;
+  text-align: center;
+  margin-bottom:52px;
+  margin-top:62px;
+  color: rgb(143,214,222);
+  background-color: transparent;
+  line-height:82px;
+}
+
+a{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 26px;
+  margin-top: 6px;
+  margin-bottom: 36px;
+  text-align: Right;
+  color: rgb(69,144,186);
+  background-color: transparent;
+  line-height: 82px;
 }
