--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,57 @@
-*{
-  margin:0;
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300");
+body {
+  background-color: #ffffff;
+  color: #000;
+  font-family: "Open Sans", sans-serif;
+}
+
+h1 {
+  text-align: center;
+}
+
+nav {
+  margin: 0 auto;
+  width: 300px;
+  height: 48px;
+}
+
+nav a {
+  color: #000;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  width: 150px;
+  line-height: 48px;
+}
+
+nav a:hover {
+  background-color: #e0e018;
+}
+
+nav ul {
   padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 
-body{
-  background-color: rgb(17,54,46);
-  font-family: 'Comfortaa', sans-serif;
-  width: 960px;
-  margin: auto;
-  cursor: url("mouse.jpg"), default;
+nav ul > li {
+  float: left;
+  width: 150px;
+  position: relative;
+  background-color: #fff;
 }
 
-.box {
+nav ul > li:hover > ul {
+  visibility: visible;
+}
+
+nav ul > li > ul {
+  visibility: hidden;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  width: 500px;
-  height: 500px;
-  background: #262626;
-  cursor: url(boc.jpg),pointer;
+  left: 0;
 }
 
-#image-item-container {
-   display: flex;
-   justify-content: space-around;
-}
-
-h1{
-  font-family: 'Comfortaa', sans-serif;
-  font-size: 118px;
-  text-align: center;
-  margin-bottom:52px;
-  margin-top:72px;
-  color: rgb(143,214,222);
-  line-height:150px;
-  background: transparent;
-}
-
-
-h2{
-  font-family: 'Comfortaa', sans-serif;
-  font-size: 82px;
-  margin-bottom: 16px;
-  text-align: center;
-  background-color: transparent;
-  color: rgb(69,144,186);
-}
-
-h3{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
-  margin-bottom: 6px;
-  text-align: center;
-  color: rgb(86,180,232);
-  background-color: transparent;
-}
-
-ol{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 20px;
-  margin-top: 160px;
-  margin-bottom: 162px;
-  text-align: center;
-  color: rgb(208,238,245);
-  background-color: transparent;
-  line-height:28px;
-}
-
-p{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-  margin-top: 42px;
-  margin-bottom: 62px;
-  text-align: left;
-  color: rgb(208,238,245);
-  background-color: transparent;
-  line-height:22px;
-}
-
-blockquote{
-  font-family: 'Comfortaa', sans-serif;
-  font-size: 62px;
-  text-align: center;
-  margin-bottom:52px;
-  margin-top:62px;
-  color: rgb(143,214,222);
-  background-color: transparent;
-  line-height:82px;
-}
-
-a{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 26px;
-  margin-top: 6px;
-  margin-bottom: 36px;
-  text-align: Right;
-  color: rgb(69,144,186);
-  background-color: transparent;
-  line-height: 82px;
+nav ul > li > ul a {
+  line-height: 48px;
+  height: 48px;
 }
