--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-*{
-  margin:0;
+* {
+  margin: 0;
   padding: 0;
 }
 
-body{
-  background-color: rgb(17,54,46);
-  font-family: 'Comfortaa', sans-serif;
+body {
+  background-color: #11362e;
+  font-family: "Comfortaa", sans-serif;
   width: 960px;
   margin: auto;
   cursor: url("mouse.jpg"), default;
@@ -15,88 +15,87 @@ body{
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   width: 500px;
   height: 500px;
   background: #262626;
-  cursor: url(boc.jpg),pointer;
+  cursor: url(boc.jpg), pointer;
 }
 
 #image-item-container {
-   display: flex;
-   justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
-h1{
-  font-family: 'Comfortaa', sans-serif;
+h1 {
+  font-family: "Comfortaa", sans-serif;
   font-size: 118px;
   text-align: center;
-  margin-bottom:52px;
-  margin-top:72px;
-  color: rgb(143,214,222);
-  line-height:150px;
+  margin-bottom: 52px;
+  margin-top: 72px;
+  color: #8fd6de;
+  line-height: 150px;
   background: transparent;
 }
 
-
-h2{
-  font-family: 'Comfortaa', sans-serif;
+h2 {
+  font-family: "Comfortaa", sans-serif;
   font-size: 82px;
   margin-bottom: 16px;
   text-align: center;
   background-color: transparent;
-  color: rgb(69,144,186);
+  color: #4590ba;
 }
 
-h3{
-  font-family: 'Open Sans', sans-serif;
+h3 {
+  font-family: "Open Sans", sans-serif;
   font-size: 24px;
   margin-bottom: 6px;
   text-align: center;
-  color: rgb(86,180,232);
+  color: #56b4e8;
   background-color: transparent;
 }
 
-ol{
-  font-family: 'Open Sans', sans-serif;
+ol {
+  font-family: "Open Sans", sans-serif;
   font-size: 20px;
   margin-top: 160px;
   margin-bottom: 162px;
   text-align: center;
-  color: rgb(208,238,245);
+  color: #d0eef5;
   background-color: transparent;
-  line-height:28px;
+  line-height: 28px;
 }
 
-p{
-  font-family: 'Open Sans', sans-serif;
+p {
+  font-family: "Open Sans", sans-serif;
   font-size: 18px;
   margin-top: 42px;
   margin-bottom: 62px;
   text-align: left;
-  color: rgb(208,238,245);
+  color: #d0eef5;
   background-color: transparent;
-  line-height:22px;
+  line-height: 22px;
 }
 
-blockquote{
-  font-family: 'Comfortaa', sans-serif;
+blockquote {
+  font-family: "Comfortaa", sans-serif;
   font-size: 62px;
   text-align: center;
-  margin-bottom:52px;
-  margin-top:62px;
-  color: rgb(143,214,222);
+  margin-bottom: 52px;
+  margin-top: 62px;
+  color: #8fd6de;
   background-color: transparent;
-  line-height:82px;
+  line-height: 82px;
 }
 
-a{
-  font-family: 'Open Sans', sans-serif;
+a {
+  font-family: "Open Sans", sans-serif;
   font-size: 26px;
   margin-top: 6px;
   margin-bottom: 36px;
   text-align: Right;
-  color: rgb(69,144,186);
+  color: #4590ba;
   background-color: transparent;
   line-height: 82px;
 }
